# horse3

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_IA_SPEC.md  ANALYSE_ENRICHISSEMENT_OCTOBRE_2024.txt  AUDIT_SCRAPERS.md  AVANCEMENT_ENRICHISSEMENT.txt  Audit Optimisation Système Paris Hippiques.md  CONSEILS2_README.md  CORRECTION_DOUBLONS.txt  DEPLOIEMENT_CONSEILS2.md  Dockerfile  FICHIERS_CREES.txt  MENU_CLI_README.txt  PERSISTANCE_PARAMETRES.md  QUICKSTART.txt  README_OPTIMISATIONS.txt  RECAP_VERIFICATION_SCRAPERS.txt  REPONSES_CHATGPT_AGENT_IA.md  RESUME.txt  adapt_data_calibration.py  add_essential_features.py  add_indexes.sql  ai_assistant.py  ai_error_analyzer.py  ai_model_optimizer.py  ai_results_analyzer.py  ai_supervisor.py  analyse_finale_enrichissement.py  analyser_champs_api_pmu.py  analyser_champs_manquants.py  analyses_avancees.py  analyze_cote_calibration.py  analyze_real_bets.py  analyze_real_performance.py  api_feedback.py  api_phase9.py  (+276 more)
.bmad-core/: install-manifest.yaml
.taskmaster/: config.json  state.json
backend/: database.py  main.py
calibration/: README.md  __init__.py  artifacts_loader.py  blender_20251202_221008.pkl  calibration_report_20251202_221008.json  calibration_report_20251208_163949.json  calibrator_isotonic_20251202_221008.pkl  calibrator_isotonic_20251208_163949.pkl  calibrator_platt_20251202_221008.pkl  calibrator_platt_20251208_163949.pkl  health.json  scaler_temperature_20251202_221008.pkl  scaler_temperature_20251208_163949.pkl
catboost_info/: catboost_training.json  learn_error.tsv  (+2 more)
(+272 files in other folders)
